--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <title>Document</title>
   <style>
-    img{
+    img {
       max-width: 100%;
     }
   </style>
@@ -15,13 +15,34 @@
 
 <body>
 
-  
-  <h1>周杰伦</h1>
+  <nav>
+    <ol class="nav">
+      <li class="nav-item1">
+        <a href="#jay">个人简介</a>
+      </li>
+      <li class="nav-item2">
+        <a href="#events">重要事件</a>
+      </li>
+      <li class="nav-item3">
+        <a href="#awards">主要成就</a>
+      </li>
+      <li class="nav-item4">
+        <a href="#works">主要作品</a>
+      </li>
+      <li class="nav-item5">
+        <a href="#pictures">生活照</a>
+      </li>
+      <li class="nav-item6">
+        <a href="#life">生平</a>
+      </li>
+    </ol>
+  </nav>
+  <h1 id="jay">周杰伦</h1>
   <p>
     周杰伦（1979年1月18日－），台湾华语流行歌曲男歌手、音乐家、编曲家、唱片制片人、魔术师。同时是演员、导演、电子竞技职业战队J
     Team的老板。
   </p>
-  <h2>重要事件</h2>
+  <h2 id="events">重要事件</h2>
   <ul>
     <li>
       2000年，周杰伦发行了他的首张专辑《Jay》，从属于唱片公司阿尔发音乐。从此以后，他的音乐获得了遍及亚洲的荣誉，尤其在台湾、中国大陆、马来西亚、香港、新加坡、印度尼西亚、韩国、日本和西方国家——例如美国和澳大利亚——的亚裔群体中。周杰伦在本土台湾共有247万张专辑的销量并获得了许多针对他的音乐工作的奖项，包括15座台湾金曲奖，2座MTV亚洲大奖。周杰伦在工作与他的专辑时也为其他艺术家写歌。
@@ -36,7 +57,7 @@
     <li>2016年，他再次进入了好莱坞，在电影《惊天魔盗团》中扮演小李。</li>
   </ul>
 
-  <h2>成就和荣誉</h2>
+  <h2 id="awards">成就和荣誉</h2>
   <ol>
     <li>
       第一张专辑《Jay》就获得最佳专辑，同时也入围当年最佳制作人、最佳作曲人和最佳新人奖三项大奖。同年，获得新加坡金曲奖最佳新人奖。
@@ -66,7 +87,7 @@
       周杰伦分别于2004年、2006年、2007年、2008年，共四次获得世界音乐大奖“亚洲最高销量艺人”奖。
     </li>
   </ol>
-  <h2>主要作品</h2>
+  <h2 id="works">主要作品</h2>
   <table>
     <thead>
       <tr>
@@ -134,27 +155,35 @@
     </tbody>
   </table>
 
-  <h2>生活照</h2>
-    <div><img width="400" src="images/z1.jpg" alt="周杰伦1"></div>
-    <div><img width="400" src="images/z2.jpg" alt="周杰伦2"></div>
-  
-  <h2>生平</h2>
-<p>周杰伦在台湾台北林口长大。父亲周耀中，当时任教于台北县芦洲国中，教授生物[3]；母亲叶惠美则是林口国中美术教师。14岁时父母离异，由父亲担任监护人，年满18岁后选择与母亲共同生活[4]，周杰伦在台湾民视新闻台由胡婉玲主持的节目《台湾演义》专访中，澄清《爸，我回来了》的灵感，只是对社会上家暴现象的感慨，并非指涉父母间的状况，父亲方面的亲戚也曾质疑过他，他还为此向亲戚们澄清，为此误解抱歉过[5]。</p>
+  <h2 id="pictures">生活照</h2>
+  <div>
+    <a href="images/z1.jpg" target="_blank">
+      <img width="400" src="images/z1.jpg" alt="周杰伦1">
+    </a>
+  </div>
+  <div>
+    <a href="images/z2.jpg" target="_blank">
+      <img width="400" src="images/z2.jpg" alt="周杰伦2">
+    </a>
+  </div>
 
-<p>周杰伦他自小对音乐表现出浓厚的兴趣，并且喜欢模仿歌星、演员表演和变魔术。3岁开始学习钢琴。周杰伦国小时住在台北市光华商场附近，就读忠孝国小。国中时就读金华国中，此时期他的父母因长年争执而决议离婚，使周杰伦的性情大受影响。除了音乐外，周杰伦热爱篮球，他在国中参加篮球队，结识学长陈建州。在同侪中是高手，球场上的表现常受众人围观，他的身高是171公分[来源请求]。</p>
+  <h2 id="life">生平</h2>
+  <p>
+    周杰伦在台湾台北林口长大。父亲周耀中，当时任教于台北县芦洲国中，教授生物[3]；母亲叶惠美则是林口国中美术教师。14岁时父母离异，由父亲担任监护人，年满18岁后选择与母亲共同生活[4]，周杰伦在台湾民视新闻台由胡婉玲主持的节目《台湾演义》专访中，澄清《爸，我回来了》的灵感，只是对社会上家暴现象的感慨，并非指涉父母间的状况，父亲方面的亲戚也曾质疑过他，他还为此向亲戚们澄清，为此误解抱歉过[5]。
+  </p>
 
-<p>高中就读于台北县私立淡江中学第一届音乐科（本来是想报考华冈艺校，但错过了报名期间，幸好淡江中学恰巧新设了音乐科），主修钢琴，副修大提琴，为将来的音乐发展打下了深厚的基础[6]。这时的他因正值青春期，常常秀琴技想吸引女同学的注意。但学科成绩不甚理想，故高中毕业时，大学联考落榜。又因患有僵直性脊椎炎，依据台湾兵役制度得以免服义务兵役[7]。</p>
+  <p>
+    周杰伦他自小对音乐表现出浓厚的兴趣，并且喜欢模仿歌星、演员表演和变魔术。3岁开始学习钢琴。周杰伦国小时住在台北市光华商场附近，就读忠孝国小。国中时就读金华国中，此时期他的父母因长年争执而决议离婚，使周杰伦的性情大受影响。除了音乐外，周杰伦热爱篮球，他在国中参加篮球队，结识学长陈建州。在同侪中是高手，球场上的表现常受众人围观，他的身高是171公分[来源请求]。
+  </p>
 
-<p>周杰伦曾说过表示少年时受到香港乐坛“四大天王”之一张学友的专辑《吻别》的影响，从而喜欢并开始专注于流行音乐[8]。另外他也透漏过，除了张学友以外，李恕权与史帝夫·汪达也是他童年时影响他很深的人，李恕权每回出现在电视上，周杰伦便会在电视机面前模仿他，而史帝夫·汪达有一首《I just called to say I love you》是他的婶婶曾在他叔父的葬礼中播放的歌曲。由于他的音乐基础扎实，令其在流行音乐创作方面如鱼得水。</p>
+  <p>
+    高中就读于台北县私立淡江中学第一届音乐科（本来是想报考华冈艺校，但错过了报名期间，幸好淡江中学恰巧新设了音乐科），主修钢琴，副修大提琴，为将来的音乐发展打下了深厚的基础[6]。这时的他因正值青春期，常常秀琴技想吸引女同学的注意。但学科成绩不甚理想，故高中毕业时，大学联考落榜。又因患有僵直性脊椎炎，依据台湾兵役制度得以免服义务兵役[7]。
+  </p>
+
+  <p>
+    周杰伦曾说过表示少年时受到香港乐坛“四大天王”之一张学友的专辑《吻别》的影响，从而喜欢并开始专注于流行音乐[8]。另外他也透漏过，除了张学友以外，李恕权与史帝夫·汪达也是他童年时影响他很深的人，李恕权每回出现在电视上，周杰伦便会在电视机面前模仿他，而史帝夫·汪达有一首《I
+    just called to say I love you》是他的婶婶曾在他叔父的葬礼中播放的歌曲。由于他的音乐基础扎实，令其在流行音乐创作方面如鱼得水。</p>
 </body>
+<div style="height: 200px;"></div>
 
 </html>
-
-<!-- 正则替换
-\[\d+\] 匹配 类似 [89] -->
-
-<!-- 完整版 meta:vp
-    <meta
-name="viewport"
-content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
-/> -->
